--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,119 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html>
   <head>
-    <title>Staffyapp</title>
+    <title>Sheetkiller</title>
     <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Share+Tech+Mono">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.5.1/css/bulma.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.3.4/vue.min.js"></script>
   </head>
 
   <body>
+  <div class="mainContainer">
+      <section class="navigation">
+        <div class="nav-container" style="padding-left: 10px; padding-right: 10px;">
+          <div class="brand raleway">
+            <a href="/">Staffy</a><!--This can be the logo-->
+          </div>
+          <nav>
+            <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
+            <ul>
+              <li><a class="raleway" id="homeLink" href="/">Home</a></li>
+              <% if user_signed_in? %>
+                <% if !current_user.nil? %><li><a class="raleway" href="/talent_profiles/<%= current_user.talent_profile.id %>">Talent Profile</a></li><% end %>
+                <% if user_signed_in? %><li><a class="raleway" href="<%= edit_user_registration_path %>">Settings</a></li><% end %>
+                <li><%= link_to "Log Out", destroy_user_session_path, method: :delete, :class => "raleway" %></li>
+              <% else %>
+                <li><%= link_to "Log In", new_user_session_path, :class=> "raleway" %></li>
+              <% end %>
+              <li style="text-align: center;"><a class="raleway" id="closeLink" href="#" style="font-size: 5vh;margin-bottom: 2px;">×</a></li>
+            </ul>
+          </nav>
+        </div>
+      </section>
+      <div class="filler"></div>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+  <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.js"></script>
+  <script>
+    function myFunction() {
+        var x = document.getElementById('navbar');
+        if (x.style.display === 'none') {
+            x.style.display = 'block';
+        } else {
+            x.style.display = 'none';
+        }
+        var y = document.getElementById('mobile');
+        if (y.style.display === 'inline') {
+            y.style.display = 'none';
+        } else {
+            y.style.display = 'inline';
+        }
+    }
+
+    (function($) { // Begin jQuery
+      $(function() { // DOM ready
+      // If a link has a dropdown, add sub menu toggle.
+      $(window).resize(function(){
+        if($( window ).width()>800){
+          $('nav ul').show();
+          $('#homeLink').hide();
+          $('#closeLink').hide();
+        }
+        else{
+          $('#homeLink').show();
+          $('#closeLink').show();
+        }
+      });
+      $('#homeLink').hide();
+      $('#closeLink').hide();
+
+      $('nav ul li a:not(:only-child)').click(function(e) {
+        $(this).siblings('.nav-dropdown').toggle();
+        // Close one dropdown when selecting another
+        $('.nav-dropdown').not($(this).siblings()).hide();
+        e.stopPropagation();
+      });
+      // Clicking the 'close' button from dropdown will remove the dropdown class
+      $('#closeLink').click(function() {
+        $('nav ul').hide();
+      });
+      // Toggle open and close nav styles on click
+      $('#nav-toggle').click(function() {
+        $('nav ul').slideToggle();
+      });
+      // Hamburger to X toggle
+      $('#nav-toggle').on('click', function() {
+        $('#homeLink').show();
+        $('#closeLink').show();
+        this.classList.toggle('active');
+      });
+      }); // end DOM ready
+    })(jQuery); // end jQuery
+  </script>
+  <section>
+    <% if !notice.nil? %><div class="notice"><%= notice %></div><% end %>
+    <% if !alert.nil? %><div class="alert"><%= alert %></div><% end %>
+  </section>
+  <div id="yieldContainer">
     <%= yield %>
+  </div>
+</div>
+<footer class="raleway">
+  <div class="columns">
+    <div class="column footerText">
+      <h2 class="headline">Are You A Client?</h2>
+    </div>
+    <div class="column footerText">
+      <h4>© <%= Date.today.year %> Staffy</h4>
+    </div>
+    <div class="column footerText">
+      <h4>Contact us at <a href="mailto:info@staffy.com">info(at)staffy.com</a></h4>
+    </div>
+   </div>
+</footer>
   </body>
 </html>
